finished adding swagger documentation
