# controllers/cart.controller.go
@@ -11,6 +11,19 @@ import (
 	"github.com/kennizen/e-commerce-backend/utils"
 )
 
+// @Summary      Add product to cart.
+// @Description  API for adding an product the cart.
+// @Tags         Cart
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Bearer accessToken"
+// @Param        productId path string true "Product ID"
+// @Param        order body service.AddToCartPayload true "Cart payload"
+// @Success      200  {object} utils.ResUser
+// @Failure      400  {object} utils.ResUser
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /cart/product/{productId} [post]
 func AddToCart(w http.ResponseWriter, r *http.Request) {
 	userId := r.Context().Value(middlewares.ContextKey("userID"))
 
@@ -30,9 +43,7 @@ func AddToCart(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var payload struct {
-		Quantity int `validate:"required,gte=1"`
-	}
+	var payload service.AddToCartPayload
 
 	err1 := json.NewDecoder(r.Body).Decode(&payload)
 
@@ -50,17 +61,28 @@ func AddToCart(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	service.AddToCart(service.CartArgs{
-		UserId:    userId.(string),
-		ProductId: productId,
-		Quantity:  payload.Quantity,
+	service.AddToCart(service.AddToCartPayload{
+		Quantity: payload.Quantity,
 	},
+		userId.(string),
+		productId,
 		w,
 	)
 }
 
 // ---------------------------------------------------------------------------------------- //
 
+// @Summary      Remove product from cart.
+// @Description  API for removing a product from cart.
+// @Tags         Cart
+// @Produce      json
+// @Param        Authorization header string true "Bearer accessToken"
+// @Param        productId path string true "Product ID"
+// @Success      200  {object} utils.ResUser
+// @Failure      400  {object} utils.ResUser
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /cart/product/{productId} [delete]
 func RemoveFromCart(w http.ResponseWriter, r *http.Request) {
 	userId := r.Context().Value(middlewares.ContextKey("userID"))
 
@@ -85,6 +107,19 @@ func RemoveFromCart(w http.ResponseWriter, r *http.Request) {
 
 // ---------------------------------------------------------------------------------------- //
 
+// @Summary      Update a cart product.
+// @Description  API for updating the quantity for a cart product.
+// @Tags         Cart
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Bearer accessToken"
+// @Param        productId path string true "Product ID"
+// @Param        order body service.AddToCartPayload true "Cart payload"
+// @Success      200  {object} utils.ResUser
+// @Failure      400  {object} utils.ResUser
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /cart/product/{productId} [put]
 func UpdateCartItems(w http.ResponseWriter, r *http.Request) {
 	userId := r.Context().Value(middlewares.ContextKey("userID"))
 
@@ -104,9 +139,7 @@ func UpdateCartItems(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var payload struct {
-		Quantity int `validate:"required,gte=1"`
-	}
+	var payload service.AddToCartPayload
 
 	err1 := json.NewDecoder(r.Body).Decode(&payload)
 
@@ -116,15 +149,27 @@ func UpdateCartItems(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	service.UpdateCartItems(service.CartArgs{
-		UserId:    userId.(string),
-		ProductId: id,
-		Quantity:  payload.Quantity,
-	}, w)
+	service.UpdateCartItems(service.AddToCartPayload{
+		Quantity: payload.Quantity,
+	},
+		userId.(string),
+		id,
+		w,
+	)
 }
 
 // ---------------------------------------------------------------------------------------- //
 
+// @Summary      Get all cart products.
+// @Description  API for fetching all the cart products.
+// @Tags         Cart
+// @Produce      json
+// @Param        Authorization header string true "Bearer accessToken"
+// @Success      200  {object} utils.ResUserWithData{data=[]service.GetCartResponse}
+// @Failure      400  {object} utils.ResUser
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /cart [get]
 func GetCart(w http.ResponseWriter, r *http.Request) {
 	userId := r.Context().Value(middlewares.ContextKey("userID"))
 
