# controllers/orders.controller.go
@@ -10,6 +10,18 @@ import (
 	"github.com/kennizen/e-commerce-backend/utils"
 )
 
+// @Summary      Place an order.
+// @Description  API for placing an order with the products in the cart.
+// @Tags         Order
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Bearer accessToken"
+// @Param        order body service.OrdersPayload true "Order payload"
+// @Success      200  {object} utils.ResUser
+// @Failure      400  {object} utils.ResUser
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /order [post]
 func PlaceOrder(w http.ResponseWriter, r *http.Request) {
 	userId := r.Context().Value(middlewares.ContextKey("userID"))
 
@@ -46,6 +58,16 @@ func PlaceOrder(w http.ResponseWriter, r *http.Request) {
 
 // ---------------------------------------------------------------------------------------- //
 
+// @Summary      Get all orders of a user.
+// @Description  API for fetching all the orders of a user.
+// @Tags         Order
+// @Produce      json
+// @Param        Authorization header string true "Bearer accessToken"
+// @Success      200  {object} utils.ResUserWithData{data=[]service.AllOrdersResponse}
+// @Failure      400  {object} utils.ResUser
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /orders [get]
 func GetOrders(w http.ResponseWriter, r *http.Request) {
 	userId := r.Context().Value(middlewares.ContextKey("userID"))
 
